--- a/src/card/card.css
+++ b/src/card/card.css
@@ -1,11 +1,7 @@
 .Card {
-  background-color: #f0f5f9;
   width: 650px;
   height: 650px;
   margin: 60px auto;
-  border-style: solid;
-  border-width: 5px;
-  border-color: #52616a;
 }
 
 .Card-back {
@@ -18,7 +14,7 @@
   height: 140px;
   margin: 9.5px 13.5px;
   padding: 30px 0;
-  transition: transform 0.8s;
+  transition: transform 1s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -32,7 +28,7 @@
   width: 100px;
   height: 140px;
   /* margin: 10px 13px; */
-  transform: rotateY(180deg);
+  transform: rotateY(360deg);
 }
 
 .Card-button {
@@ -44,12 +40,13 @@
 }
 
 .Card-score {
+  text-align: center;
   position: fixed;
   top: 70px;
   right: 300px;
   font-size: 50px;
 }
 
-.Card-hidden {
+.hidden {
   visibility: hidden;
 }
