--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,43 +1,36 @@
-/* #1e2022 */
 .Home {
-  background-color: #f0f5f9;
-  width: 650px;
-  height: 650px;
-  margin: 60px auto;
-  border-style: solid;
-  border-width: 5px;
-  border-color: #52616a;
-}
-
-.Home-Card {
+  font-family: DungGeunMo;
+  width: 800px;
+  height: 350px;
+  margin: 130px auto;
   text-align: center;
-  background-color: #c9d6de;
-  display: inline-block;
-  width: 250px;
-  height: 250px;
-  margin: 50px 25px 25px 50px;
 }
 
-.Home-2048 {
-  background-color: #c9d6de;
-  display: inline-block;
-  width: 250px;
-  height: 250px;
-  margin: 25px 50px 50px 25px;
+.Home-Title {
+  font-size: 50px;
 }
 
-.Home-Tetris {
-  background-color: #c9d6de;
+.Home-Menu {
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
   display: inline-block;
-  width: 250px;
-  height: 250px;
-  margin: 50px 50px 25px 25px;
+  width: 300px;
+  height: 300px;
+  margin: 25px 40px;
+  padding: 5px 0;
+  box-sizing: border-box;
+  border-radius: 6%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.Home-Minesweeper {
-  background-color: #c9d6de;
-  display: inline-block;
-  width: 250px;
-  height: 250px;
-  margin: 25px 25px 50px 50px;
+.Home-Menu:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.Home-Menu.Home-Card {
+  background-image: url(../images/card.png);
+  background-repeat: no-repeat;
+  background-size: 180px 230px;
+  background-position: center 55px;
 }
