--- a/src/home/home.css
+++ b/src/home/home.css
@@ -6,7 +6,7 @@
   text-align: center;
 }
 
-.Home-Title {
+.Home-Snake {
   font-size: 50px;
 }
 
@@ -18,7 +18,7 @@
   width: 300px;
   height: 300px;
   margin: 25px 40px;
-  padding: 5px 0;
+  padding: 10px 0;
   box-sizing: border-box;
   border-radius: 6%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
